--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -28,6 +28,7 @@
     <string name="last_quakes_info_card_view_tittle">Last quakes</string>
     <string name="last_quakes_info_card_view_button">Ok</string>
     <string name="last_quakes_info_card_view_description">This list includes quakes of magnitude greater than or equal to 3.0</string>
-    <string name="VIEWMODEL_ERROR_SERVER">Server does not respond, try later</string>
+    <string name="VIEWMODEL_TIMEOUT_ERROR">Server does not respond, try later</string>
     <string name="VIEWMODEL_NOCONNECTION_ERROR">You don\'t have an Internet connection</string>
+    <string name="VIEWMODEL_SERVER_ERROR">Server does not respond, try later</string>
 </resources>
