Se agrega activity de invitacion, animaciones, TODO:boton de notificacion en main debe ser quitado y firebase performance

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,5 +155,9 @@
     <string name="TAG_GOOGLE_PLAY_NOSOPORTADO" translatable="false">Dispositivo no soportado</string>
     <string name="TAG_GOOGLE_PLAY_ACTUALIZADO" translatable="false">Google Play actualizado</string>
 
+    <string name="title_activity_invitation">InvitationActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+
 
 </resources>
