--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -34,4 +34,8 @@
     <string name="icono_app">App icon</string>
     <string name="invitation_welcome">¡Welcome!</string>
     <string name="icono_ondas">Waves icon</string>
+    <string name="invite">Invite friends</string>
+    <string name="INVITATION_TITLE">" Invite your friends to use the app!"</string>
+    <string name="INVITATION_MESSAGE">Download the app and receive alert of the last quakes in Chile</string>
+    <string name="INVITATION_SUBJECT">Download LastQuakeChile App</string>
 </resources>
