Se agrega conversión de latitud, longitud hacia grados, mintutos, segundos.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,7 +9,7 @@
     <string name="icono_tiempo">Time icon</string>
     <string name="tiempo">Date/Hour</string>
     <string name="icono_distancia">Distance icon</string>
-    <string name="distancia">Distance</string>
+    <string name="distancia">Position DMS</string>
     <string name="icono_epicentro">Epicenter icon</string>
     <string name="icono_escala">Scale icon</string>
     <string name="profundidad">Depth</string>
@@ -37,4 +37,8 @@
     <string name="invite">Invite friends</string>
     <string name="INVITATION_TITLE">" Invite your friends to use the app!"</string>
     <string name="INVITATION_SUBJECT">Download LastQuakeChile App</string>
+    <string name="coordenadas_sur">S</string>
+    <string name="coordenadas_norte">N</string>
+    <string name="coordenadas_oeste">W</string>
+    <string name="coordenadas_este">East</string>
 </resources>
