Correccion de error al abrir una notificacion, se agrega latitud y longitud en servidor y manejo de datos en el pending intent.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -40,5 +40,5 @@
     <string name="coordenadas_sur">S</string>
     <string name="coordenadas_norte">N</string>
     <string name="coordenadas_oeste">W</string>
-    <string name="coordenadas_este">East</string>
+    <string name="coordenadas_este">E</string>
 </resources>
